tests/NormalTests/paczka1/fuzzy1/47713735.err
Error in line 2: gBTBbdQ A19 47,7
Error in line 8: cHGWSfMY ®912 66,4
Error in line 10: DFvmUb A19 43,11
Error in line 7: DFvmUb A912 73,3
Error in line 4: S650 A19 18,4
Error in line 12: DFvmUb A19 105,2
Error in line 22: TJe A912 44,9
Error in line 27: DFvmUb A912 27,3
